--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   "dependencies": {
     "angular-filter": "^0.5.4",
     "body-parser": "~1.12",
+    "connect-mongo": "^0.8.1",
+    "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
+    "express-session": "^1.11.3",
     "hogan-express": "~0.5",
     "method-override": "^2.3.3",
     "mongodb": "^2.0.36",
     "mongojs": "^1.0.1",
     "nodemon": "^1.3.7",
+    "rand-token": "^0.2.1",
     "socket.io": "^1.3.5"
   }
 }
