--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "angular-filter": "^0.5.4",
     "body-parser": "~1.12",
+    "captchapng": "0.0.1",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
@@ -29,6 +30,7 @@
     "mongojs": "^1.0.1",
     "nodemon": "^1.3.7",
     "rand-token": "^0.2.1",
+    "request": "^2.58.0",
     "socket.io": "^1.3.5"
   }
 }
