--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
+    "express-session": "^1.11.3",
     "fs": "0.0.2",
     "hogan-express": "~0.5",
     "method-override": "^2.3.3",
@@ -30,6 +31,6 @@
     "nodemon": "^1.3.7",
     "rand-token": "^0.2.1",
     "request": "^2.58.0",
-    "socket.io": "^1.3.5",
+    "socket.io": "^1.3.5"
   }
 }
